# DataBridge

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/: sample.jsonl
data/sample_energon/: dataset_info.json
data/sample_energon/.nv-meta/: .info.json  dataset.yaml  index.sqlite  index.uuid  split.yaml
src/data_bridge/: __init__.py  cli.py
src/data_bridge/comm/: dataset.py
src/data_bridge/formats/: __init__.py  binidx.py  webdataset.py
src/databridge/: __init__.py  cli.py
src/databridge/comm/: dataloader.py  dataset.py
src/databridge/formats/: base.py  binidx.py  energon.py  jsonl.py  registry.py  webdataset.py
src/databridge/utils/: __init__.py  progress.py  tokenizer.py
tests/: __init__.py  test_formats.py
